<package format="2">
  <name>pviz</name>
  <version>0.0.0</version>
  <description>The pviz package</description>
  <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
  <license>BSD</license>

  <author email="bcohen@seas.upenn.edu">Benjamin Cohen</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
